# SPECT2D

./: .gitignore  CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  README.md  RunAction.cc  RunAction.hh  RunMaker.py  SensitiveDetector.cc  SensitiveDetector.hh  SimMessenger.cc  SimMessenger.hh  SteppingAction.cc  SteppingAction.hh  main.cc  run.mac
macros/: MakeAndSub.py  RunMaker.py  SubmitJob.py  analyze_average_hits.C  init_vis.mac  run.mac  run_all.py
run_mac_files_xy/: run_x_-0.84_y_-0.84_zoff_100.0.mac  run_x_-0.84_y_-0.84_zoff_100.0.sh  run_x_-0.84_y_-0.84_zoff_100.0.sh.o6337589  run_x_-0.84_y_-10.92_zoff_100.0.mac  run_x_-0.84_y_-10.92_zoff_100.0.sh  run_x_-0.84_y_-10.92_zoff_100.0.sh.o6337590  run_x_-0.84_y_-12.60_zoff_100.0.mac  run_x_-0.84_y_-12.60_zoff_100.0.sh  run_x_-0.84_y_-12.60_zoff_100.0.sh.o6337591  run_x_-0.84_y_-14.28_zoff_100.0.mac  run_x_-0.84_y_-14.28_zoff_100.0.sh  run_x_-0.84_y_-14.28_zoff_100.0.sh.o6337592  run_x_-0.84_y_-15.96_zoff_100.0.mac  run_x_-0.84_y_-15.96_zoff_100.0.sh  run_x_-0.84_y_-15.96_zoff_100.0.sh.o6337593  run_x_-0.84_y_-2.52_zoff_100.0.mac  run_x_-0.84_y_-2.52_zoff_100.0.sh  run_x_-0.84_y_-2.52_zoff_100.0.sh.o6337594  run_x_-0.84_y_-4.20_zoff_100.0.mac  run_x_-0.84_y_-4.20_zoff_100.0.sh  run_x_-0.84_y_-4.20_zoff_100.0.sh.o6337595  run_x_-0.84_y_-5.88_zoff_100.0.mac  run_x_-0.84_y_-5.88_zoff_100.0.sh  run_x_-0.84_y_-5.88_zoff_100.0.sh.o6337596  run_x_-0.84_y_-7.56_zoff_100.0.mac  (+2376 more)
